--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
     <div class="portfolio-container">
         <ul class="navlist" >
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Project</a></li>
