--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div class="portfolio-container">
         <ul class="navlist" >
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Work</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Project</a></li>
             <li><a href="#">Service</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
         <div class="left-container">
             <div class="icons">
